fix: add margin top to align-question class

--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,7 @@ h1,h2,h3,h4,h5,h6 {
 /* Align Question */
 
 .align-question {
+  margin-top: 10px;
   text-align: center;
   border-radius: 10px;
 }
